# dash-rs

./: .gitignore  Cargo.toml
resources/: hdeindex-1.mpd
src/: duration_iso_8601_serde.rs  main.rs
src/models/: mod.rs  mpd.rs  period.rs  representations.rs  segments.rs  utils.rs
src/serde_custom/: conditional_uint.rs  duration_iso_8601.rs  mod.rs  tags.rs
