[package]
name = "dash"
version = "0.1.0"
authors = ["agory <gory.alexandre02@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
quick-xml  = { version =  "0.22.0", features = ["serialize"]}
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
either = "1.6.1"